# GIS-test

./: .flake8  .gitignore  .pylintrc  Dockerfile  GIS.postman_collection.json  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
app/: app.py  config.py
app/api/routers/: __init__.py  auth.py  create_polygon.py  geometry.py
app/core/: context.py  database.py  decorations.py  enums.py
app/interfaces/: database.py
app/models/: base.py  coordinate_reference_system.py  request_cache.py
app/schemas/geometry/: geometry_schema.py
app/schemas/user/: user_data.py
app/services/: auth.py  geometry.py  request_cache.py  security.py
config/: settings.yml
migrations/: env.py
migrations/versions/: 2022-05-06-16-14_init_extensions_e7671ba0428a.py  2024-11-17-16-14_init_extensions_e7671ba0428a.py  2024-11-18-12-44_2024_11_18_12_44_53_auto_71bfda8db5a2.py  2024-11-18-20-50_add_request_cache_b58757c14d8d.py
seeds/: create_coordinate_reference_system.py
