[tool.poetry]
name = "test-gis-backend-app"
version = "0.1.0"
description = "TEST GIS API"
authors = ["tretyakov <Imtretyakov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
alembic = "^1.14.0"
dynaconf = "^3.2.6"
geoalchemy2 = "^0.16.0"
sqlalchemy = "^2.0.36"
pydantic = "^2.9.2"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
shapely = "^2.0.6"
pyjwt = "^2.10.0"
psycopg2 = "^2.9.10"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
isort = "^5.13.2"
pylint = "^3.3.1"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
